2009-08-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Use string::empty.
 test/test018.cxx, test/test037.cxx:
 - Better transactor names.
2009-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/internal/callgate.hxx:
 - Cleaned up constness, thanks Kirit Saelensminde.
2009-07-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/robusttransaction.hxx, src/connection_base.cxx,
 src/robusttransaction.cxx:
 - Redid robusttransaction.  Was completely broken.
2009-07-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/transaction_base.cxx:
 - Throw in_doubt again when trying to commit again while doubt.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx,
 include/pqxx/internal/gates/icursorstream_icursor_iterator.hxx,
 include/pqxx/internal/gates/icursor_iterator-icursorstream.hxx,
 src/cursor.cxx:
 - More call gates.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx,
 include/pqxx/internal/gates/connection-reactivation_avoidance_exemption.hxx,
 src/connection_base.cxx:
 - Set up another call gate.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am, include/pqxx/internal/callgate.hxx,
 include/pqxx/internal/*, src/*.cxx:
 - Moved "gate" headers into include/pqxx/internal/gates.
 - Replaced gate-class name suffix with namespace.
 - Extracted common base class for call gates.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx,
 test/unit/test_prepared_statement:
 - Unnamed prepared statements require PQprepare().
 - Bugfix: unnamed prepared statement kept using its first definition.
 include/pqxx/result.hxx:
 - Fix up PQAlloc deletion handling if shared_ptr not available.
 src/connection_base.cxx:
 - Conditionally-compiled code wasn't using the proper gate.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Substitute full version information.
 doc/Doxyfile.in, src/util.cxx: