@@ -14,6 +14,7 @@
  - "Varargs" prepared statements.
  - Unnamed prepared statements now supported.
  - Results have iterator as well as const_iterator.
+ - Rewrite of robusttransaction logic; may actually do its job now.
 3.0
  - Website is now at http://pqxx.org/ (no redirects)
  - Completely replaced cursor classes
